// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`trimAndFormatPath() does not trim anything 1`] = `"[2m1234567890/1234567890/[22m[1m1234.js[22m"`;

exports[`trimAndFormatPath() split at the path.sep index 1`] = `"[2m.../[22m[1m1234.js[22m"`;

exports[`trimAndFormatPath() trims dirname (longer line width) 1`] = `"[2m...890/1234567890/[22m[1m1234.js[22m"`;

exports[`trimAndFormatPath() trims dirname 1`] = `"[2m...234567890/[22m[1m1234.js[22m"`;

exports[`trimAndFormatPath() trims dirname and basename 1`] = `"[1m...1234.js[22m"`;

exports[`wrapAnsiString() returns the string unaltered if given a terminal width of zero 1`] = `"This string shouldn't cause you any trouble"`;

exports[`wrapAnsiString() returns the string unaltered if given a terminal width of zero 2`] = `"This string shouldn't cause you any trouble"`;

exports[`wrapAnsiString() wraps a long string containing ansi chars 1`] = `
"abcde [31m[1mred-
bold[22m[39m 12344
56[2mbcd[22m 123t
tttttththt
hththththt
hththththt
hththththt
hthththtet
etetetette
tetetetete
tetete[4m[1mstnh
snthsnth[22m[24mss
ot"
`;

exports[`wrapAnsiString() wraps a long string containing ansi chars 2`] = `
"abcde red-
bold 12344
56bcd 123t
tttttththt
hththththt
hththththt
hththththt
hthththtet
etetetette
tetetetete
tetetestnh
snthsnthss
ot"
`;
